<resources>
    <string name="app_name">Проверка знаний</string>
    <string name="title">Переводчик единиц длинны</string>
    <string name="km">километров</string>
    <string name="m">метров</string>
    <string name="dm">дециметров</string>
    <string name="sm">сантиметров</string>
    <string name="mm">милиметров</string>
    <string name="inspect">Проверить</string>
    <string name="good">Отлично!</string>
    <string name="bad">Проверьте материал, ответ неверный!</string>
</resources>